# Trinity-RFT

./: .buildinfo  .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  README.md  README_zh.md  genindex.html  index.html  main.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.codex/: AGENTS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yaml  sphinx-doc.yaml  unittest.yaml
_modules/: functools.html  index.html
_sources/build_api/: trinity.algorithm.add_strategy.rst.txt  trinity.buffer.rst.txt  trinity.common.workflows.rst.txt  trinity.manager.rst.txt  trinity.rst.txt  trinity.trainer.verl.rst.txt  trinity.utils.rst.txt
benchmark/: README.md  bench.py
benchmark/config/: countdown-template.yaml  gsm8k-template.yaml
benchmark/reports/: intercode_sql.md
build_api/: modules.html  trinity.algorithm.add_strategy.html  trinity.algorithm.advantage_fn.html  trinity.algorithm.entropy_loss_fn.html  trinity.algorithm.html  trinity.algorithm.kl_fn.html  trinity.algorithm.policy_loss_fn.html  trinity.algorithm.sample_strategy.html  trinity.buffer.html  trinity.buffer.reader.html  trinity.buffer.schema.html  trinity.buffer.writer.html  trinity.common.html  trinity.common.models.html  trinity.common.rewards.html  trinity.common.workflows.html  trinity.explorer.html  trinity.html  trinity.manager.config_registry.html  trinity.manager.html  trinity.plugins.html  trinity.trainer.html  trinity.trainer.verl.html  trinity.utils.html
docker/: Dockerfile  README.md  common.sh  docker-compose.yaml  env.example  mcp_server.py  remote.env.example  remote_run.sh  run.sh  start.sh  status.sh  stop.sh  sync.sh
docs/: README.md
docs/agents/: README.md
docs/sphinx_doc/: build_doc.sh
en/main/: .buildinfo  api_reference.html  genindex.html  index.html  main.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/agentscope_frozenlake/: README.md  agent.py  env.py  frozenlake_agent.yaml  utils.py  workflow.py
examples/agentscope_react/: README.md  dapo.yaml  gsm8k.yaml
examples/agentscope_tool_react/: agentscopev0_tool_react_dapo.yaml  agentscopev0_tool_react_gsm8k.yaml  agentscopev1_tool_react_dapo.yaml
examples/agentscope_websearch/: agentscopev1_websearch_agent.yaml
examples/asymre_gsm8k/: gsm8k.yaml
examples/async_gsm8k/: explorer.yaml  trainer.yaml
examples/cispo_gsm8k/: gsm8k.yaml
examples/dapo_math/: README.md  dapo.yaml
examples/dpo_humanlike/: dpo.yaml
examples/entropy/: README.md  clipb.yaml  clipb_trainer.patch  clipv.yaml  clipv_dp_actor.py  clipv_trainer.patch
examples/gigpo_alfworld/: README.md  gigpo.yaml
examples/grpo_alfworld/: alfworld.yaml
examples/grpo_alfworld_general_multi_step/: alfworld.yaml
examples/grpo_frozen_lake/: frozen_lake.yaml
examples/grpo_gsm8k/: gsm8k.yaml
examples/grpo_gsm8k_experience_pipeline/: gsm8k.yaml
examples/grpo_gsm8k_task_pipeline/: gsm8k.yaml
examples/grpo_gsm8k_trainable_ruler/: gsm8k_ruler.yaml
examples/grpo_intercode_sql/: README.md  get_intercode_sql_data.py  intercode_sql.yaml
examples/grpo_math/: math.yaml
examples/grpo_rubric_as_reward/: rubric.yaml
examples/grpo_sciworld/: sciworld.yaml
examples/grpo_toolcall/: toolace.yaml
examples/grpo_vlm/: vlm.yaml
examples/grpo_webshop/: webshop.yaml
examples/mix_chord/: README.md  (+1 more)
main/: .buildinfo  api_reference.html  genindex.html  index.html  main.html  objects.inv  py-modindex.html  search.html  searchindex.js
tests/: conftest.py  tools.py
trinity/: __init__.py
tutorial/: example_async_mode.html  example_data_functionalities.html  example_dpo.html  example_mix_algo.html  example_multi_turn.html  example_reasoning_advanced.html  example_reasoning_basic.html  faq.html  trinity_configs.html  trinity_programming_guide.html
(+2466 files in other folders)
