[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name =  "trinity-rft"
dynamic = ["version"]
authors = [
    {name="Trinity-RFT Team", email="trinity-rft@outlook.com"},
]
description = "Trinity-RFT: A Framework for Training Large Language Models with Reinforcement Fine-Tuning"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "verl==0.7.1",
    "ray[default]>=2.50.0",
    "tensordict",
    "wandb",
    "omegaconf",
    "sqlalchemy",
    "psycopg2-binary",
    "networkx",
    "latex2sympy2_extended",
    "math_verify>=0.8.0",
    "ninja",
    "fire",
    "streamlit",
    "flask",
    "requests",
    "tensorboard",
    "openai",
    "jsonlines",
    "sortedcontainers",
    "word2number",
    "matplotlib",
    "psutil",
    "nvidia-ml-py",
    "pybase64",
    "transformers>=5.8.1",
    "datasets>=4.0.0",
    "typer>=0.23.0",
]

[project.scripts]
trinity = "trinity.cli.launcher:main"

[project.optional-dependencies]
vllm = [
    "vllm>=0.19.1,<=0.21.0",
]
sglang = [
    "sglang>=0.5.11,<=0.5.12",
]
data = [
    "py-data-juicer>=1.4.3"
]
agent = [
    "agentscope[tuner]>=1.0.19"
]
openjudge = [
    "py-openjudge>=0.2.2"
]
dev = [
    "pre-commit>=2.17.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "flake8-docstrings>=1.6.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pytest>=8.0.0",
    "pytest-json-ctrf",
    "parameterized",
    "viztracer",
]
megatron = [
    # Recommend to install megatron-core from source, do not install from pip,
    # to get the latest updates and bug fixes.
    # If you want to install from pip, please make sure to install version 0.16.1 or above.
    "megatron-core[mlm]>=0.16.1",

    # Please install transformer-engine from source, do not install from pip
    # "transformer-engine[pytorch]==2.15.0",

    # Install mbridge from main branch (unreleased version)
    # "mbridge @ git+https://github.com/ISEEKYAN/mbridge.git@90c4633a6cdcfe5d29723d7b145d32f6f5e73303",
    # or Megatron bridge, which is not tested
    # "megatron-bridge==0.3.1",
]
tinker = [
    "tinker>=0.20.0; python_version >= '3.11'",
]

doc = [
    "sphinx<9.0.0",
    "sphinx-autobuild",
    "sphinx-book-theme",
    "myst-parser",
    "sphinxcontrib-apidoc",
    "sphinx-multiversion",
    "sphinxcontrib-mermaid",
]

mm = [
    "qwen-vl-utils",
    "blobfile",
]

flash_attn = [
    "flash-attn>=2.8.3"
]

qwen3_5 = [
    "flash-linear-attention>=0.4.2",
    "causal_conv1d>=1.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["trinity*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
my_package = ["*.md", "*.rst"]

[tool.setuptools.dynamic]
version = {attr = "trinity.__version__"}

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.github
    | \.vscode
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
)/
'''

[tool.isort]
known_third_party = ["wandb"]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch", "numpy"]

[project.entry-points."vllm.general_plugins"]
vllm_patch = "trinity.common.models.vllm_patch:vllm_patch"

[project.urls]
"Homepage" = "https://github.com/agentscope-ai/Trinity-RFT"
"Documentation" = "https://agentscope-ai.github.io/Trinity-RFT/"
